--- a/core3/table-browser-impl/trunk/pom.xml
+++ b/core3/table-browser-impl/trunk/pom.xml
@@ -14,14 +14,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>table-browser-impl</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 	<name>Cytoscape Table Browser Implementation</name>
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/swing-application-impl/tags/table-browser-impl-3.0.0-alpha1</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/swing-application-impl/tags/table-browser-impl-3.0.0-alpha1</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/swing-application-impl/tags/table-browser-impl-3.0.0-alpha1</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/swing-application-impl/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/swing-application-impl/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/swing-application-impl/trunk</url>
 	</scm>
 
 	<build>
