--- a/core3/integration-test-support/trunk/pom.xml
+++ b/core3/integration-test-support/trunk/pom.xml
@@ -15,16 +15,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>integration-test-support</artifactId>
-  <version>3.0.0-alpha3-SNAPSHOT</version>
+  <version>3.0.0-alpha3</version>
 
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/integration-test-support/trunk</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/integration-test-support/tags/integration-test-support-3.0.0-alpha3</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/integration-test-support/tags/integration-test-support-3.0.0-alpha3</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/integration-test-support/tags/integration-test-support-3.0.0-alpha3</url>
   </scm>
 
   <build>
