--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -73,7 +73,7 @@
 						<tagletArtifact>
 							<groupId>org.cytoscape</groupId>
 							<artifactId>taglets</artifactId>
-							<version>1.0-SNAPSHOT</version>
+							<version>3.0.0-alpha1</version>
 						</tagletArtifact>
 					</tagletArtifacts>
 				</configuration>
@@ -103,10 +103,12 @@
 				<inherited>false</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.1</version>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<goals>deploy</goals>
+					<!-- so that impl bundles with modules will build correctly -->
+					<preparationGoals>clean install</preparationGoals>
 				</configuration>
 			</plugin>
 
@@ -280,7 +282,7 @@
 						<tagletArtifact>
 							<groupId>org.cytoscape</groupId>
 							<artifactId>taglets</artifactId>
-							<version>1.0-SNAPSHOT</version>
+							<version>3.0.0-alpha1</version>
 						</tagletArtifact>
 					</tagletArtifacts>
 				</configuration>
