--- a/core3/event-impl/trunk/pom.xml
+++ b/core3/event-impl/trunk/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.cytoscape</groupId>
 	<artifactId>event-impl-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>3.0.0-alpha2</version>
+	<version>3.0.0-alpha3-SNAPSHOT</version>
 	<name>event-impl-parent</name>
 
 	<modules>
@@ -18,9 +18,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/event-impl/tags/event-impl-parent-3.0.0-alpha2</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/event-impl/tags/event-impl-parent-3.0.0-alpha2</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/event-impl/tags/event-impl-parent-3.0.0-alpha2</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/event-impl/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/event-impl/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/event-impl/trunk</url>
 	</scm>
 
     <build>
