--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha5</version>
   </parent>
 
   <groupId>org.cytoscape</groupId>
@@ -58,52 +58,52 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
       <type>test-jar</type>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>event-api</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
       <type>test-jar</type>
     </dependency>
     <!-- the APIs we're supporting - these should remain relatively static -->
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>event-api</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>viewmodel-api</artifactId>
-      <version>3.0.0-alpha3-SNAPSHOT</version>
+      <version>3.0.0-alpha3</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>service-util</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <!-- implementations of the APIs - these can change as things evolve -->
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-impl</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>viewmodel-impl</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>equations-impl</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     
     <dependency>
