--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,13 +10,13 @@
   <groupId>org.cytoscape</groupId>
   <artifactId>test-support</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0.0-alpha1</version>
   <name>test-support</name>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/test-support/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/test-support/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/test-support/trunk</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/test-support/tags/test-support-3.0.0-alpha1</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/test-support/tags/test-support-3.0.0-alpha1</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/test-support/tags/test-support-3.0.0-alpha1</url>
     </scm>
 
     <repositories>
