--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -10,13 +10,13 @@
   <groupId>org.cytoscape</groupId>
   <artifactId>test-support</artifactId>
   <packaging>jar</packaging>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
   <name>test-support</name>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/test-support/tags/test-support-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/test-support/tags/test-support-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/test-support/tags/test-support-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/test-support/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/test-support/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/test-support/trunk</url>
     </scm>
 
     <repositories>
