--- a/core3/psi-mi-impl/trunk/pom.xml
+++ b/core3/psi-mi-impl/trunk/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha5</version>
   </parent>
   <properties>
     <bundle.symbolicName>org.cytoscape.psi-mi-impl</bundle.symbolicName>
@@ -15,9 +15,39 @@
   <groupId>org.cytoscape</groupId>
   <artifactId>psi-mi-impl</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>${bundle.symbolicName}
-    [${bundle.namespace}]</name>
+  <name>${bundle.symbolicName} [${bundle.namespace}]</name>
   <packaging>bundle</packaging>
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/psi-mi-impl/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/psi-mi-impl/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/psi-mi-impl/trunk</url>
+    </scm>
+    <repositories>
+        <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+        <repository>
+            <id>cytoscape_snapshots</id>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <name>Cytoscape Snapshots</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+        <repository>
+            <id>cytoscape_releases</id>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <name>Cytoscape Releases</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -33,18 +63,18 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>layout-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>3.0.0-alpha2-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>test-support</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
